tests/gtests/negative/smoke/03_binding_invalid.gtest
#SET OUT=${WORK_DIR}/binding_invalid.json
#RUN greentic-component test --wasm ${REPO_ROOT}/target/wasm32-wasip2/release/component_adaptive_card.wasm --manifest ${REPO_ROOT}/component.manifest.json --op card --input-json '{"card_spec":{"inline_json":{"type":"AdaptiveCard","version":"1.3","body":[{"type":"TextBlock","text":"{{#if}}"}]}}}'
#EXPECT_EXIT 0
#CAPTURE_JSON > ${OUT}
#EXPECT_JSONPATH ${OUT} error.code equals AC_BINDING_EVAL_ERROR
#EXPECT_JSONPATH ${OUT} error.details.validation_issues[*].code contains AC_BINDING_EVAL_ERROR
#SAVE_ARTIFACT ${OUT}
